# dotfiles

./: .gitignore  .pre-commit-config.yaml  install.sh  pyproject.toml
bash-helpers/: claude-jj-checkpoint.sh  claude-statusline.sh
claude-docker/: Dockerfile  README.md  claude-settings.json  pyproject.toml
fish/functions/: claude-local.fish  fe-local.fish
playwright-docker/: Dockerfile
tests/: test_container.py  test_jj_checkpoint.py  test_jj_checkpoint_e2e.py  test_playwright_container.py  test_statusline.py
